deployment-k8s/istio/PeerAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: petclinic-mtls
  namespace: petclinic
spec:
  mtls:
    mode: STRICT
