deployment-k8s/istio/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: petclinic-mtls
  namespace: petclinic
spec:
  host: "*.petclinic.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
