deployment-k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: petclinic
  namespace: petclinic
spec:
  hosts:
    - "*"  
  gateways:
    - petclinic-gateway
  http:
    # Route for Vets Service API
    - match:
        - uri:
            prefix: /api/vet/
      rewrite:
        uri: /
      route:
        - destination:
            host: vets-service.petclinic.svc.cluster.local
            port:
              number: 8083
    
    # Route for Visits Service API
    - match:
        - uri:
            prefix: /api/visit/
      rewrite:
        uri: /
      route:
        - destination:
            host: visits-service.petclinic.svc.cluster.local
            port:
              number: 8082
    
    # Route for Customers Service API
    - match:
        - uri:
            prefix: /api/customer/
      rewrite:
        uri: / 
      route:
        - destination:
            host: customers-service.petclinic.svc.cluster.local
            port:
              number: 8081
    # Route for Frontend UI and other paths (must be last)
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: api-gateway.petclinic.svc.cluster.local
            port:
              number: 8080
