deployment-k8s/istio/authorization-customer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: customers-allow
  namespace: petclinic
spec:
  selector:
    matchLabels:
      service.istio.io/canonical-name: customers
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
              - cluster.local/ns/petclinic/sa/customers-service
              - cluster.local/ns/petclinic/sa/visits-service
              - cluster.local/ns/petclinic/sa/api-gateway
    # Allow ZAP scanner for security testing
    - from:
        - source:
            namespaces: ["petclinic"]
      when:
        - key: source.labels[app]
          values: ["zap-scanner"]
